--- a/client/src/styles/NavBar.scss
+++ b/client/src/styles/NavBar.scss
@@ -20,3 +20,13 @@
     margin-right: 60px;
   }
 }
+
+.nav-drawer > div {
+  background-color: $secondary-color;
+  width: 280px;
+
+  hr {
+    background-color: $secondary-color-light;
+  }
+
+}
