--- a/client/src/styles/Subhead.scss
+++ b/client/src/styles/Subhead.scss
@@ -70,4 +70,8 @@
     }
   }
 
+  .key-left-icon {
+    margin-top: 10px;
+  }
+
 }
